--- a/quiz5/quiz5.qmd
+++ b/quiz5/quiz5.qmd
@@ -35,7 +35,7 @@ z.dados <- scale(dados)
 i)  Kolmogorov-Smirnov
 
 ```{r}
-ks.test(z.dados, 0, 1)
+ks.test(z.dados, "pnorm", 0, 1)
 ```
 
 ii) Shapiro-Wilk
@@ -65,6 +65,7 @@ Considerando um nível de significância de 5%, não rejeitamos a hipótese de q
 ------------------------------------------------------------------------
 
 #### b) Probabilidade de que uma chamada demore entre 125 e 150 segundos.
+
 ```{r}
 media <- 150
 sigma <- 15
@@ -82,7 +83,8 @@ plot(phi, -5, 5)
 polygon(x = x, y = y, col="gray")
 ```
 
-####  c) Probabilidade de que uma chamada demore menos de 125 segundos.
+#### c) Probabilidade de que uma chamada demore menos de 125 segundos.
+
 ```{r}
 z1 <- (125  - media) / sigma
 probabilidade <- pnorm(z1)
@@ -94,9 +96,8 @@ plot(phi, -5, 5)
 polygon(x = x, y = y, col="gray")
 ```
 
-
-
 #### d) Probabilidade de que uma chamada demore entre 145 e 155 segundos.
+
 ```{r}
 media <- 150
 sigma <- 15
@@ -115,6 +116,7 @@ polygon(x = x, y = y, col="gray")
 ```
 
 #### e) Probabilidade de que uma chamada demore entre 160 e 165 segundos.
+
 ```{r}
 media <- 150
 sigma <- 15
@@ -131,3 +133,78 @@ y = c(0, phi(seq(z1, z2, l=100)), 0)
 plot(phi, -5, 5)
 polygon(x = x, y = y, col="gray")
 ```
+
+## 2. Identificação de distribuição
+
+Dados de uma variável aleatória X:
+
+```{r}
+dados <- c(1.9993382, 1.4414849, 2.1477166, 2.1087828, 2.1342892, 2.1844835, 1.5091879, 2.0467623, 1.0642741, 2.1302612, 1.8389897, 1.8924614, 1.9316041, 1.5602204, 1.6991884, 1.7228081, 1.5197833, 1.7659242, 0.6914335, 1.4598759, 2.0017607, 1.5139209, 1.8334780, 1.8847480, 1.9072389, 1.6294414, 1.9068617, 1.7744973, 2.4300455, 1.8958270)
+```
+
+#### a) Faça a identificação da distribuição.
+
+Pelo diagrama de Cullen e Frei, os dados parecem seguir uma distribuição Lognormal ou Weibull.
+
+```{r message = FALSE}
+library(fitdistrplus)
+library(logspline)
+descdist(dados, discrete = FALSE)
+```
+
+Os gráficos de ajuste de distribuição, dão indícios de que a distribuição Weibull é a que melhor se ajusta aos dados.
+
+```{r error = FALSE, warning = FALSE}
+dados_norm <- (dados - min(dados))/(max(dados) - min(dados))
+weibull <- fitdist(dados, "weibull")
+gamma <- fitdist(dados, "gamma")
+lognormal <- fitdist(dados, "lnorm")
+normal <- fitdist(dados, "norm")
+beta <- fitdist(dados_norm, "beta", method = "mme")
+```
+
+```{r}
+plot(weibull)
+```
+
+```{r}
+plot(gamma)
+```
+
+```{r}
+plot(lognormal)
+```
+
+```{r}
+plot(normal)
+```
+
+O Critério de Informacao de Akaike (AIC) confirma que **a distribuição Weibull** é a que melhor se ajusta aos dados.
+
+```{r}
+cat(weibull$aic, gamma$aic, lognormal$aic, normal$aic, beta$aic)
+```
+
+#### b) Compare os resultados gerados pelo teste de Kolmogorov-Smirnov considerando as distribuições Gama, Lognormal e Weibull.
+```{r}
+mle <- fitdist(dados, "gamma", method="mle")
+summary(mle)
+ks.test(dados, "pgamma", 20.98456, 11.73920, exact = FALSE)
+
+mle <- fitdist(dados, "lnorm", method="mle")
+summary(mle)
+ks.test(dados, "plnorm", meanlog=0.5568348, sdlog=0.2367576, exact=FALSE)
+
+mle <- fitdist(dados, "weibull", method="mle")
+summary(mle)
+ks.test(dados, "pweibull", shape = 6.513198, scale = 1.918411, exact=FALSE)
+```
+
+Todos os testes apresentaram p-valores que não justificam rejeitar as respectivas hipóteses nulas. Entretanto, a escolha da função de distribuição que melhor ajusta os dados é a Weibull, pois além de apresentar p-valor = 0.9624, é a que obteve melhor Critério de Informacao de Akaike.
+
+
+#### c) Plotar a função e o histograma para distribuição escolhida.
+
+#### d) Verifique se a área sob a curva estimada é igual a 1.
+
+#### e) Para a distribuição escolhida, calcule a área gerada no intervalo \[1; 1,5\]. Plotar e destacar essa área.
