--- a/quiz5/quiz5.qmd
+++ b/quiz5/quiz5.qmd
@@ -60,7 +60,7 @@ lillie.test(dados)
 
 **Interpretação dos resultados:**
 
-Considerando um nível de significância de 5%, não rejeitamos a hipótese de que os dados seguem a distrição normal, pois os p-valores são todos maiores do que 0,05.
+Considerando um nível de significância de 5%, não rejeita-se a hipótese de que os dados seguem a distrição normal, pois os p-valores são todos maiores do que 0,05.
 
 ------------------------------------------------------------------------
 
@@ -186,6 +186,7 @@ cat(weibull$aic, gamma$aic, lognormal$aic, normal$aic, beta$aic)
 ```
 
 #### b) Compare os resultados gerados pelo teste de Kolmogorov-Smirnov considerando as distribuições Gama, Lognormal e Weibull.
+
 ```{r}
 mle <- fitdist(dados, "gamma", method="mle")
 summary(mle)
@@ -202,7 +203,6 @@ ks.test(dados, "pweibull", shape = 6.513198, scale = 1.918411, exact=FALSE)
 
 Todos os testes apresentaram p-valores que não justificam rejeitar as respectivas hipóteses nulas. Entretanto, a escolha da função de distribuição que melhor ajusta os dados é a Weibull, pois além de apresentar p-valor = 0.9624, é a que obteve melhor Critério de Informacao de Akaike.
 
-
 #### c) Plotar a função e o histograma para distribuição escolhida.
 
 ```{r warning=FALSE}
@@ -212,6 +212,7 @@ lines(x = density(w_2_1))
 ```
 
 #### d) Verifique se a área sob a curva estimada é igual a 1.
+
 ```{r}
 w <- function(x, alpha = 6.513198, beta = 1.918411) {(alpha/(beta^alpha))*(x^(alpha-1))*(exp(-(x/beta)^alpha))}
 x <- seq(0, 5, by = .01)
@@ -220,12 +221,14 @@ area
 ```
 
 #### e) Para a distribuição escolhida, calcule a área gerada no intervalo \[1; 1,5\]. Plotar e destacar essa área.
+
 ```{r}
 a1 <- pweibull(1, shape = 6.513198, scale = 1.918411)
 a2 <- pweibull(1.5, shape = 6.513198, scale = 1.918411)
 probabilidade <- a2 - a1
 probabilidade
 ```
+
 ```{r}
 q1 <- qweibull(a1, shape = 6.513198, scale = 1.918411)
 q2 <- qweibull(a2, shape = 6.513198, scale = 1.918411)
@@ -233,6 +236,220 @@ x = c(a1, seq(q1, q2, l=100), a2)
 y = c(0, w(seq(q1, q2, l=100)), 0)
 plot(w, 0, 5)
 polygon(x = x, y = y, col="gray")
+```
+
+## 3. Normalidade e intervalo de confiança
+
+Amostra aleatória simples com os valores de inflação para os anos de 2013 a 2022 coletados do site do Banco Central do Brasil:
+
+```{r}
+inflacao <- c(5.91, 6.41, 10.67, 6.29, 2.95, 3.75, 4.31, 4.52, 10.06, 5.79)
+```
+
+####a) Faça os testes de Shapiro-Wilk e de Lilliefors para verificar a normalidade. Qual é sua conclusão?
+
+```{r}
+shapiro.test(inflacao)
+lillie.test(inflacao)
+```
+
+Considerando um nível de significância de 5%, não rejeita-se a hipótese de que os dados seguem a distrição normal, considerando que ambos p-valores são todos maiores do que 0,05.
+
+#### b) Usando esses dados, construa um intervalo de confiança de 99% para a média da inflação.
+
+```{r}
+t.test(inflacao, conf.level = .99)
+x_bar <- mean(inflacao)
+s <- sd(inflacao)
+alpha <-  0.01
+n <- length(inflacao)
+gl <- n - 1
+t <- qt(alpha/2, gl, lower.tail = FALSE)
+LI <- x_bar - t*(s/(n^0.5))
+LS <- x_bar + t*(s/(n^0.5))
+cat (LI, LS)
+LS - LI
+```
+
+Portanto, o intervalo de confiaça de 99% para média da amostra da inflação é \[3.457911, 8.674089\].
+
+#### c) Os especialistas têm a opinião de que o intervalo calculado para a média é muito amplo e querem um intervalo de comprimento total igual a 3. Encontre o nível de confiança para esse novo intervalo.
+
+?????
+
+```{r}
+# Calcule o valor de t
+t_value <- (3 / 2) 
+t_value
+# Encontre o nível de confiança correspondente
+c <- 2 * (1 - pt(t_value, df = gl))
+c = .9
+
+alpha <- 1 - c
+alpha
+t <- qt(alpha/2, gl, lower.tail = FALSE)
+t
+LI <- x_bar - t*(s/(n^0.5))
+LS <- x_bar + t*(s/(n^0.5))
+cat (LI, LS)
+LS - LI
 
 ```
+
+??????
+
+#### d) Construa um intervalo de confiança de 90% para o desvio padrão.
+
+```{r}
+c <- 0.9
+q2_1 <- qchisq((1 - c) / 2, df = gl)
+q2_2 <- qchisq(1 - (1 - c) / 2, df = gl)
+
+# Intervalo de confiança para o desvio padrão
+intervalo <- sqrt(((n - 1) * var(inflacao)) / c(q2_2, q2_1))
+intervalo
+```
+
+Portanto, o intervalo de confiaça de 99% para média da amostra da inflação é \[1.850952, 4.175218\].
+
+#### e) Agora, teste a normalidade para toda a série histórica desde o início do regime de metas. Ou seja, utilize os dados de inflação efetiva de 1999 até 2022. Qual a conclusão?
+
+```{r}
+inflacao <- c(8.94,5.97,7.67,12.53,9.3,7.6,5.69,3.14,4.46,5.9,4.31,5.91,6.5,5.84,5.91,6.41,10.67,6.29,2.95,3.75,4.31,4.52,10.06,5.79)
+length(inflacao)
+```
+
+Como a amostra tem menos de 30 observações, será utilizado o teste de Shapiro-Wilk.
+
+```{r}
+shapiro.test(inflacao)
+```
+
+Considerando um nível de significância de 5%, não rejeita-se a hipótese de que os dados da inflação seguem a distrição normal. É possível chegar na mesma conclusão aplicando-se os testes de Anderson-Darling e Kolmogorov-Smirnov.
+
+```{r warning=FALSE}
+ad.test(inflacao)
+ks.test(scale(inflacao), "pnorm", 0, 1)
+```
+
+	
+	
+	
+	
+	
+	
+
+**4.** TÓPICO
+--IDENTIFICAÇÃO
+DE DISTRIBUIÇÃO
+
+\
+
+Identifique
+a distribuição de cada um dos conjuntos de dados mostrado a seguir.
+
+\
+
+a)
+
+\
+
+c(20.8625807,
+7.2445709, 4.4659396, 3.2712081, 4.9300651, 5.7444213,
+6.6700987,
+
+11.1750446,
+2.3753017, 3.5425386, 0.5978486, 6.8869953, 6.1102197,
+8.2716973,
+
+9.7465462,
+3.3991988, 1.8557047, 11.3983705, 3.6847590, 2.3327479,
+6.1364329,
+
+4.4686122,
+7.8007834, 4.7649257, 3.8829371, 5.9986131, 5.5163819,
+9.6951710,
+
+10.1645820,
+6.1304865)
+
+\
+
+b)
+
+\
+
+c(1.4940354,
+2.0164275, 1.9513521, 1.5298282, 0.6815670, 2.4267801, 0.6762800,
+1.7018986,
+
+4.1632638,
+2.5472784, 2.2174151, 0.6058986, 1.7432601, 1.1199216, 1.7135932,
+2.8758657,
+
+0.8537880,
+1.5511504, 2.3262178, 2.3267933, 1.3916375, 4.7439947, 2.1864812,
+2.0269031,
+
+1.7489244,
+1.8191036, 2.0845146, 1.2229195, 1.0115042, 2.7931222)
+
+\
+
+\
+
+c)
+
+\
+
+c(9.534149,
+12.878719, 35.635908, 39.158389, 10.091099, 133.714299, 15.684000,
+3.179206,
+
+16.073085,
+57.767201, 29.543033, 24.672685, 11.955565, 2.132028, 17.455254,
+20.569096,
+
+6.293823,
+22.717485, 83.353863, 18.544482, 66.437399, 4.616951, 18.931367,
+1.464430,
+
+21.180916,
+179.315876, 24.941790, 14.105447, 7.680880,17.688369)
+
+\
+
+d)
+
+\
+
+c(4.391658,
+5.364267, 10.707930, 5.431008, 6.904122, 6.960462, 12.741468,
+8.094473, 7.255829,
+
+8.434530,
+9.747057, 6.440681, 7.623020, 9.276933, 8.711818, 5.250229,
+6.482474, 3.478216,
+
+9.717008,
+9.317296, 9.011653, 11.758927, 10.844472, 9.644711, 7.541715,
+7.561009, 10.034726,
+
+9.654606,
+6.222452, 5.207637)
+
+\
+
+e)
+
+\
+
+c(3.816942,
+4.123619, 4.575150, 3.214129, 4.854917, 3.647232, 4.003734, 3.261923)
+
+\
+
+\
+
+\
 
