--- a/quiz5/quiz5.qmd
+++ b/quiz5/quiz5.qmd
@@ -332,124 +332,84 @@ ad.test(inflacao)
 ks.test(scale(inflacao), "pnorm", 0, 1)
 ```
 
-	
-	
-	
-	
-	
-	
+### 4. Identificação de distribuição
 
-**4.** TÓPICO
---IDENTIFICAÇÃO
-DE DISTRIBUIÇÃO
+Identifique a distribuição de cada um dos conjuntos de dados mostrado a seguir.
 
-\
+**a)**
+```{r }
+dados <- c(20.8625807, 7.2445709, 4.4659396, 3.2712081, 4.9300651, 5.7444213, 6.6700987, 11.1750446, 2.3753017, 3.5425386, 0.5978486, 6.8869953, 6.1102197, 8.2716973, 9.7465462, 3.3991988, 1.8557047, 11.3983705, 3.6847590, 2.3327479, 6.1364329, 4.4686122, 7.8007834, 4.7649257, 3.8829371, 5.9986131, 5.5163819, 9.6951710, 10.1645820, 6.1304865)
 
-Identifique
-a distribuição de cada um dos conjuntos de dados mostrado a seguir.
+id_dist <- function (dados) {
+  descdist(dados, discrete = FALSE)
+  
+  dados_norm <- (dados - min(dados)) / (max(dados) - min(dados))
+  weibull <- fitdist(dados, "weibull")
+  gamma <- fitdist(dados, "gamma")
+  lognormal <- fitdist(dados, "lnorm")
+  normal <- fitdist(dados, "norm")
+  beta <- fitdist(dados_norm, "beta", method = "mme")
+  # adj <-  dados_norm[(dados_norm>0.5) & (dados_norm<1)]
+  # mean(adj)
+  # mean(dados_norm)
+  summary(dados_norm)
+  cat("Weibull: ")
+  plot(weibull)
+  cat("Gamma: ")
+  plot(gamma)
+  cat("Lognormal: ")
+  plot(lognormal)
+  cat("Normal: ") 
+  plot(normal)
+  cat("Beta: ")
+  plot(beta)
+  
+  cat(paste("Critério de Informação de Akaike\n"))
+  cat(paste("Weibull: ", weibull$aic, "\n"))
+  cat(paste("Gamma: ", gamma$aic, "\n"))
+  cat(paste("Lognormal: ", lognormal$aic, "\n"))
+  cat(paste("Normal: ", normal$aic, "\n"))
+  cat(paste("Beta: ", beta$aic, "\n"))
+}
 
-\
+id_dist(dados);
 
-a)
+```
 
-\
+A distribuição que melhor ajusta os dados é a **Gamma**.
 
-c(20.8625807,
-7.2445709, 4.4659396, 3.2712081, 4.9300651, 5.7444213,
-6.6700987,
+**b)**
+```{r}
+dados <- c(1.4940354, 2.0164275, 1.9513521, 1.5298282, 0.6815670, 2.4267801, 0.6762800, 1.7018986, 4.1632638, 2.5472784, 2.2174151, 0.6058986, 1.7432601, 1.1199216, 1.7135932, 2.8758657, 0.8537880, 1.5511504, 2.3262178, 2.3267933, 1.3916375, 4.7439947, 2.1864812, 2.0269031,1.7489244, 1.8191036, 2.0845146, 1.2229195, 1.0115042, 2.7931222)
+id_dist(dados);
 
-11.1750446,
-2.3753017, 3.5425386, 0.5978486, 6.8869953, 6.1102197,
-8.2716973,
+```
 
-9.7465462,
-3.3991988, 1.8557047, 11.3983705, 3.6847590, 2.3327479,
-6.1364329,
+A distribuição que melhor ajusta os dados é a **Gamma**.
 
-4.4686122,
-7.8007834, 4.7649257, 3.8829371, 5.9986131, 5.5163819,
-9.6951710,
+**c)**  
+```{r}
+dados <- c(9.534149, 12.878719, 35.635908, 39.158389, 10.091099, 133.714299, 15.684000, 3.179206, 16.073085, 57.767201, 29.543033, 24.672685, 11.955565, 2.132028, 17.455254, 20.569096, 6.293823, 22.717485, 83.353863, 18.544482, 66.437399, 4.616951, 18.931367, 1.464430, 21.180916, 179.315876, 24.941790, 14.105447, 7.680880,17.688369)
+id_dist(dados);
 
-10.1645820,
-6.1304865)
+```
 
-\
+A distribuição que melhor ajusta os dados é a **Lognormal**.
 
-b)
+**d)**  
+```{r}
+dados <- c(4.391658, 5.364267, 10.707930, 5.431008, 6.904122, 6.960462, 12.741468, 8.094473, 7.255829, 8.434530, 9.747057, 6.440681, 7.623020, 9.276933, 8.711818, 5.250229, 6.482474, 3.478216, 9.717008, 9.317296, 9.011653, 11.758927, 10.844472, 9.644711, 7.541715, 7.561009, 10.034726, 9.654606, 6.222452, 5.207637)
+id_dist(dados);
 
-\
+```
 
-c(1.4940354,
-2.0164275, 1.9513521, 1.5298282, 0.6815670, 2.4267801, 0.6762800,
-1.7018986,
+A distribuição que melhor ajusta os dados é a **Weibull**.
 
-4.1632638,
-2.5472784, 2.2174151, 0.6058986, 1.7432601, 1.1199216, 1.7135932,
-2.8758657,
+**e)**  
+```{r}
+dados <- c(3.816942, 4.123619, 4.575150, 3.214129, 4.854917, 3.647232, 4.003734, 3.261923)
+id_dist(dados);
 
-0.8537880,
-1.5511504, 2.3262178, 2.3267933, 1.3916375, 4.7439947, 2.1864812,
-2.0269031,
+```
 
-1.7489244,
-1.8191036, 2.0845146, 1.2229195, 1.0115042, 2.7931222)
-
-\
-
-\
-
-c)
-
-\
-
-c(9.534149,
-12.878719, 35.635908, 39.158389, 10.091099, 133.714299, 15.684000,
-3.179206,
-
-16.073085,
-57.767201, 29.543033, 24.672685, 11.955565, 2.132028, 17.455254,
-20.569096,
-
-6.293823,
-22.717485, 83.353863, 18.544482, 66.437399, 4.616951, 18.931367,
-1.464430,
-
-21.180916,
-179.315876, 24.941790, 14.105447, 7.680880,17.688369)
-
-\
-
-d)
-
-\
-
-c(4.391658,
-5.364267, 10.707930, 5.431008, 6.904122, 6.960462, 12.741468,
-8.094473, 7.255829,
-
-8.434530,
-9.747057, 6.440681, 7.623020, 9.276933, 8.711818, 5.250229,
-6.482474, 3.478216,
-
-9.717008,
-9.317296, 9.011653, 11.758927, 10.844472, 9.644711, 7.541715,
-7.561009, 10.034726,
-
-9.654606,
-6.222452, 5.207637)
-
-\
-
-e)
-
-\
-
-c(3.816942,
-4.123619, 4.575150, 3.214129, 4.854917, 3.647232, 4.003734, 3.261923)
-
-\
-
-\
-
-\
-
+A distribuição que melhor ajusta os dados é a **Lognormal**.
